# hz

./: .gitignore  Cargo.toml  README.md  Todo  a.ll  ast.txt  errors.txt  grammar.pest  output.txt  test.lang  test_char.lang
.github/workflows/: deploy.yaml
docs/: memory_model.md
examples/: run_tests.sh  test.lang  test_abi_printf.expect  test_abi_printf.lang  test_add_literal.lang  test_add_simple.lang  test_alias.lang  test_array.lang  test_array_decl.lang  test_bit_cast.lang  test_break_inner_loop.expect  test_break_inner_loop.lang  test_builtin_conflict.lang  test_c_pointer_example.lang  test_casting.expect  test_casting.lang  test_casting_error.lang  test_catch_check.lang  test_complex.lang  test_const_error.lang  test_const_pointer.expect  test_const_pointer.lang  test_const_reassign_error.lang  test_defer.expect  test_defer.lang  test_defer_bang.expect  test_defer_bang.lang  test_deref.lang  test_deref_compound.expect  test_deref_compound.lang  test_destructure_simple.lang  test_destructure_underscore.lang  test_different_packages.lang  test_duplicate_import.expect  test_duplicate_import.lang  test_error.expect  test_error.lang  test_features.expect  test_features.lang  test_ffi.lang  (+103 more)
examples/project/: main.lang  math_utils.lang
scripts/: example_expect.py
src/: ast.rs  build.rs  codegen.rs  debug.rs  grammar.pest  hir.rs  lexer.rs  lower.rs  main.rs  opt.rs  parser.rs  sema.rs  stdlib.rs
src/builtin/: align_of.rs  bit_cast.rs  is_not_null.rs  is_null.rs  mod.rs  size_of.rs  type_of.rs
src/cmd/: ast.rs  build.rs  env.rs  hir.rs  init.rs  ir.rs  jit.rs  lsp.rs  mod.rs  run.rs  symbol.rs  typelist.rs
src/codegen/: abi_bridge.rs  ast_codegen.rs  core.rs  declarations.rs  mod.rs  tests.rs
std/: arena_allocator.lang  builtin.lang  c_pointer.lang  http.lang  io.lang  math.lang  os.lang  testing.lang
(+36 files in other folders)
