[package]
name = "lang"
version = "0.1.0"
edition = "2024"

[dependencies]
# LLVM binding for code generation
inkwell = { version = "0.8.0", features = ["llvm21-1"] }

# Parser generator (使用 pest)
pest = "2.7"
pest_derive = "2.7"

clap = { version = "4.5", features = ["derive"] }
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
either = "1.15.0"

[package.metadata.pest]
grammar = "src/grammar.pest"
