[package]
name = "lang"
version = "0.1.0"
edition = "2024"

[features]
default = []
lsp = ["lsp-server", "tokio"]

[dependencies]
# LLVM binding for code generation
inkwell = { version = "0.8.0", features = ["llvm21-1"] }

clap = { version = "4.6.0", features = ["derive"] }
thiserror = "2.0.18"
log = "0.4"
env_logger = "0.11.10"

# LSP support
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lsp-server = { version = "0.7", optional = true }
tokio = { version = "1.0", features = ["full"], optional = true }
parking_lot = "0.12"
url = "2.0"

[package.metadata.pest]
grammar = "src/grammar.pest"
